# 3dRegistration

./: .gitignore  README.md  evaluate.sh
Docker/: Dockerfile
Experimenter/: .gitignore  LICENSE.md  README.md  environment.yml  experimenter.py  templater_test.py
Experimenter/classes/: Experimenter.py  Templater.py
Experimenter/classes/templates/: article.tex  boilerplate.html  html5.html  latex.tex
FastGlobalRegistration/: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  readme.md
FastGlobalRegistration/inc/: CPUTimer.h  art.h  default_config.h  fast_global_registration.h  fgr_errors.h  fgr_options.h  file_extension.h  report_generator.h
FastGlobalRegistration/src/: CPUTimer.cpp  fast_global_registration.cpp  fgr_options.cpp  main.cpp
Go-ICP/: .clang-format  .gitignore  CMakeLists.txt  art.h  default_config.h  distance_transform.cpp  distance_transform.h  goicp.cpp  goicp.h  goicp_options.cpp  goicp_options.h  main.cpp
PointCloudGenerator/: .gitignore  AddNoise.m  AddOutliers.m  ApplyRandomTransformation.m  MAIN.m  MAIN_byFunction.m  MAIN_byPLY.m  MAIN_byPtCloud.m  MAIN_dataset.m  README.md  potentialImprovements.txt  ptCloud_P.pcd  ptCloud_Q.pcd  setup_lib.m  trans.mat  trans.txt
PointCloudGenerator/data/: tide.ply
PointCloudGenerator/lib/: AddNoise.m  AddOutliers.m  ApplyRandomTransformation.m  DatasetDescriptor.m  PCbyFunc.m  SaveTransformationMatrix.m  getDiameter.m  pc_info.m  plotly_cloud.m  plotly_lineplot.m  randomlyTransformPtCloud.m  registration_error.m  textprogressbar.m  transformPtCloud.m
PointCloudGenerator/lib/Lobster/: LFragment.m  LNode.m  LTemplate.m
PointCloudGenerator/lib/templates/: lineplot.tpl  ptCloud.tpl
Presentation/: .gitignore  3DRegistration.bib  3DRegistration.tex  LICENSE.md  Makefile
Visualizer/: CMakeLists.txt  README.md  viz.sh
Visualizer/src/: viz.cpp
dataset/: .gitignore
dataset/bunny/: trans.txt
dataset/bunny0/: ptCloud_P.pcd
dataset/bunny003/: ptCloud_P.pcd  trans.txt
dataset/bunny005/: ptCloud_P.pcd  trans.txt
dataset/bunny_noise/: ptCloud_P.pcd
dataset/bunny_partial/: ptCloud_P.pcd  ptCloud_Q.pcd
pc_info/: CMakeLists.txt  main.cpp
